# OOSE-develop-and-maintain

./: Account.cpp  Account.h  Address.cpp  Address.h  Bank.cpp  Bank.h  CMakeLists.txt  Date.cpp  Date.h  DocInc.cpp  DocInc.h  DocIncEmployee.cpp  DocIncEmployee.h  Document.cpp  Document.h  ReceivedFIle.cpp  ReceivedFIle.h  Role.cpp  Role.h  Statement.cpp  Statement.h  User.cpp  User.h
.github/workflows/: ci.yml
test/: Bank_Test  Bank_Test.cpp  Document_Test.cpp  Statement_Test.cpp
